--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,7 +4,7 @@
     <string name="category_numbers">Numbers</string>
     <string name="category_fruits">Fruits</string>
     <string name="category_colors">Colors</string>
-    <string name="category_things">Things</string>
+<!--     <string name="category_things">Things</string> -->
     <string name="category_animals">Animals</string>
     <string name="category_phrases">Phrases</string>
 </resources>
